@@ -573,7 +573,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("REBMIX Version 2.10.0")
+  message("REBMIX Version 2.10.1")
  
   flush.console()
   
